text color contrast corrected

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -111,7 +111,7 @@ h2 {
     gap: 10px;
     background-color: var(--secondary-color);
     padding: 20px;
-    opacity: 0.8;
+    opacity: 0.9;
 
 }
 
